Merge from HEAD into WCM-DEV2. Also fixes build breakage in jndi-client and catalina-virtual that I introduced earlier.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/BRANCHES/WCM-DEV2/root@3393 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261